# chkpt

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
crates/chkpt-cli/: Cargo.toml
crates/chkpt-cli/skills/chkpt/: SKILL.md
crates/chkpt-cli/skills/chkpt/references/: cli-commands.md  store-layout.md
crates/chkpt-cli/src/: main.rs
crates/chkpt-core/: Cargo.toml
crates/chkpt-core/benches/: hash_compress_compare.rs  save_pipeline.rs
crates/chkpt-core/examples/: bench_catalog.rs  bench_fs_probes.rs  bench_ops.rs  bench_snapshot_store.rs
crates/chkpt-core/src/: config.rs  error.rs  lib.rs
crates/chkpt-core/src/attachments/: deps.rs  git.rs  mod.rs
crates/chkpt-core/src/index/: mod.rs  schema.rs
crates/chkpt-core/src/ops/: delete.rs  io_order.rs  list.rs  lock.rs  mod.rs  progress.rs  restore.rs  save.rs
crates/chkpt-core/src/scanner/: matcher.rs  mod.rs  walker.rs
crates/chkpt-core/src/store/: blob.rs  catalog.rs  mod.rs  pack.rs  snapshot.rs  tree.rs
crates/chkpt-core/tests/: blob_test.rs  catalog_test.rs  config_test.rs  delete_test.rs  deps_test.rs  e2e_test.rs  git_attachment_test.rs  index_test.rs  list_test.rs  lock_test.rs  pack_test.rs  restore_test.rs  save_test.rs  scanner_test.rs  snapshot_test.rs  tree_test.rs
crates/chkpt-mcp/: Cargo.toml
crates/chkpt-mcp-npm/: cli.mjs  package.json
crates/chkpt-mcp/src/: main.rs
crates/chkpt-napi/: .gitignore  Cargo.toml  README.md  cli.mjs  package.json  vitest.config.ts
crates/chkpt-napi/__test__/: attachments.spec.ts  config.spec.ts  e2e.spec.ts  index.spec.ts  ops.spec.ts  scanner.spec.ts  store.spec.ts
crates/chkpt-napi/npm/: .gitignore
crates/chkpt-napi/npm/darwin-arm64/: README.md  package.json
crates/chkpt-napi/npm/darwin-x64/: README.md  package.json
crates/chkpt-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/chkpt-napi/npm/linux-x64-gnu/: README.md  package.json
crates/chkpt-napi/npm/win32-x64-msvc/: README.md  package.json
crates/chkpt-napi/scripts/: build-all.sh  publish.sh
crates/chkpt-napi/src/: attachments.rs  config.rs  error.rs  index.rs  lib.rs  ops.rs  scanner.rs  store.rs
crates/chkpt-plugin/: .mcp.json  README.md
crates/chkpt-plugin/.claude-plugin/: plugin.json
crates/chkpt-plugin/skills/chkpt/: SKILL.md
crates/chkpt-plugin/skills/chkpt/references/: automation-patterns.md  cli-commands.md  store-layout.md
docs/: benchmarking.md
docs/plans/: 2026-03-03-chkpt-design.md  2026-03-03-chkpt-implementation.md  2026-03-03-napi-js-sdk-design.md  2026-03-03-napi-js-sdk-implementation.md  2026-03-04-chkpt-skill-design.md  2026-03-04-chkpt-skill-implementation.md  2026-03-04-mcp-npm-interactive-restore-design.md  2026-03-04-mcp-npm-interactive-restore-implementation.md  2026-03-05-plugin-marketplace-design.md  2026-03-05-plugin-marketplace-implementation.md  2026-03-31-benchmark-before-after-report.md
docs/superpowers/plans/: 2026-03-31-perf-storage-redesign.md  2026-03-31-performance-hotpaths.md
docs/superpowers/specs/: 2026-03-31-default-dependency-directory-exclusions-design.md  2026-03-31-git-state-snapshot-design.md  2026-03-31-perf-storage-redesign-design.md  2026-03-31-performance-hotpaths-design.md  2026-04-03-xxh3-lz4-switch-design.md
scripts/: bench_real_repos.sh  benchmarks.py
