[workspace]
resolver = "2"
members = ["crates/chkpt-core", "crates/chkpt-cli", "crates/chkpt-mcp", "crates/chkpt-napi"]

[workspace.dependencies]
blake3 = "1"
zstd = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
tar = "0.4"
fs4 = { version = "0.13", features = ["tokio"] }
tempfile = "3"
ignore = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
dirs = "5"
tracing-subscriber = "0.3"
dialoguer = "0.11"
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
