[package]
name = "chkpt-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[[bin]]
name = "chkpt"
path = "src/main.rs"

[dependencies]
chkpt-core = { version = "0.1.0", path = "../chkpt-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
