[package]
name = "chkpt-core"
version = "0.2.0"
edition = "2021"
description = "Core library for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[dependencies]
blake3 = { workspace = true }
zstd = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
fs4 = { workspace = true }
tempfile = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bitcode = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
rustix = { workspace = true }
libc = "0.2"
xxhash-rust = { workspace = true }
lz4_flex = { workspace = true }

[[bench]]
name = "save_pipeline"
harness = false
