[package]
name = "chkpt-core"
version = "0.3.0"
edition = "2021"
description = "Core library for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[dependencies.xxhash-rust]
workspace = true

[dependencies.lz4_flex]
workspace = true

[dependencies.rusqlite]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.tar]
workspace = true

[dependencies.fs4]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.ignore]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.bitcode]
workspace = true

[dependencies.memmap2]
workspace = true

[dev-dependencies]
libc = "0.2"
blake3 = "1"
zstd = "0.13"

[dev-dependencies.tokio]
workspace = true

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.rustix]
workspace = true

[dev-dependencies.lz4_flex]
workspace = true

[dev-dependencies.xxhash-rust]
workspace = true

[[bench]]
name = "save_pipeline"
harness = false

[[bench]]
name = "hash_compress_compare"
harness = false
