[package]
name = "chkpt-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[dependencies]
chkpt-core = { version = "0.1.0", path = "../chkpt-core" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
