[package]
name = "chkpt-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP server for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[dependencies.chkpt-core]
version = "0.3.0"
path = "../chkpt-core"

[dependencies.rmcp]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
