[package]
name = "chkpt-napi"
version = "0.3.0"
edition = "2021"
description = "Node.js N-API bindings for chkpt – a fast, content-addressable checkpoint system"
license = "Apache-2.0"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
napi-derive = "3"

[dependencies.chkpt-core]
version = "0.3.0"
path = "../chkpt-core"

[dependencies.napi]
version = "3"
default-features = false
features = [ "async", "serde-json", "napi9" ]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.chrono]
workspace = true

[build-dependencies]
napi-build = "2"
